# CMPE258-Project

./: .gitignore  Dockerfile  Makefile  README.md  app.py  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: gradio_app.py
artifacts/: README.md  artifact_manifest.md  demo_video_link.md  presentation_recording_link.md
artifacts/baseline_results/: baseline_comparison.csv  baseline_metrics.json
configs/: train_config.yaml
data/: README.md
docs/: architecture_decisions.md  data_card.md  deepwiki_repomix.md  deployment_runbook.md  llm_prompting.md  mlops_plan.md  model_card.md  rubric_traceability.md  submission_checklist.md  team_contributions.md
examples/: sample_window.csv
notebooks/: HAR_Pipeline.ipynb
outputs/checkpoints/: demo_centroid_model.npz
outputs/preprocessing/: normalizer.npz  reference_profile.json
outputs/results/: ablation_summary.csv  ablation_summary.json  demo_centroid_classification_report.json  demo_centroid_confusion_matrix.csv  demo_centroid_model_summary.txt  demo_centroid_test_metrics.json  hyperparameter_sweep_results.csv  hyperparameter_sweep_results.json  uci_notebook_baseline_results.csv  uci_notebook_baseline_results.json
reports/: final_report.md  proposal.md
scripts/: create_demo_artifacts.py  generate_artifact_manifest.py  run_app.sh  train_full.sh  train_quick.sh
slides/: DeepHAR_MLOps_Deck.pptx  deck_outline.md
src/deep_har/: __init__.py  ablations.py  augment.py  constants.py  (+11 more)
tests/: test_constants.py  test_data_helpers.py  test_monitoring.py  test_preprocess.py  test_prompting.py
