[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-har-mlops"
version = "0.1.0"
description = "MLOps-style deep learning pipeline for smartphone human activity recognition"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Vineeth"},
  {name = "Siddharth"},
  {name = "Arshan"},
  {name = "Soham"}
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
